feat:javafx模块/支持双向绑定